# gretl

./: .travis.yml  Cargo.toml  LICENSE  README.md  testrun.sh
data/: testmeta.txt
data/example_data/: chr5.yeast.gfa  dirnodes.txt  testGraph_1.1.gfa  testGraph_compact.gfa  testGraph_compact_nopw.gfa  testGraph_complex.gfa  testGraph_non-num.gfa  testGraph_non_num.gfa
doc/: gretl.examples.md  gretl.explained.md  output_doc.md  subcommands_explained.md
paper/: gretl.stats.graph.tsv  gretl.stats.path.tsv  header.tsv  stats_explained.md
scripts/: block.py  blocks.py  bootstrap.ipynb  core.ipynb  core.py  multi.auto.py  multi.correlate.py  multi.heatmap.py  multi.histogram.py  multi.scatter.py  nwindow.ipynb  nwindow.py  path.ipynb  path.py  ps.ipynb  ps.py  saturation_plotter.py  stats_hist.py  stats_path.ipynb  stats_path.py  window.ipynb  window.py
scripts/notebooks/: bootstrap.ipynb  core.ipynb
scripts/scripts/: core.py  ps.py  saturation_plotter.py
src/: graph_stats.rs  helper.rs  logging.rs  main.rs  path.rs  stats.rs  writer.rs
src/block/: block_main.rs  mod.rs
src/bootstrap/: bootstrap_main.rs  helper.rs  meta.rs  mod.rs  reader.rs  writer.rs
src/core/: core_calc.rs  core_main.rs  mod.rs  writer.rs
src/feature/: feature_main.rs  mod.rs  writer.rs
src/find/: find_main.rs  mod.rs
src/helpers/: graphs.rs  helper.rs  mod.rs
src/id2int/: convert_graph.rs  id2int_main.rs  mod.rs  writer.rs
src/node_list/: edge_stats.rs  mod.rs  nl_wrapper.rs  wrapper.rs  (+3 more)
tests/: analysis.rs  bootstrap.rs  cli.rs  compact_test.rs  features_test.rs  mc.rs  mod.rs  no_num1.rs  no_pw.rs  non_compact.rs  non_delete.rs  stats.rs  stats_test.rs  v1_1.rs  yeast.rs
workflows/: core.md  nwindow.md  saturation.md  saturation.sh  window.md
(+55 files in other folders)
