[package]
name = "gfastats"
version = "0.1.3"
authors = ["moinSebi <s.vorbrugg@googlemail.com>"]
edition = "2018"
license = "MIT"
description = "GFA statistics"
repository = "https://github.com/MoinSebi/gfastats"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gfa-reader = {git = "https://github.com/MoinSebi/gfa-reader"}
clap = "=3.0.0-beta.4"
rand = "=0.6.1"
nalgebra = "0.29.0"
num-traits = "0.2.14"



[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"