[package]
name = "gretl"
version = "0.1.3"
authors = ["moinSebi <s.vorbrugg@googlemail.com>"]
edition = "2018"
license = "MIT"
description = "GFA statistics"
repository = "https://github.com/MoinSebi/gretl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gfa-reader = {git = "https://github.com/MoinSebi/gfa-reader", commit = "865683b"}
#gfa-reader = {path = "../gfa-reader"}

clap = "=3.0.0-beta.4"
rand = "=0.6.1"
rayon = "1.8.0"
log = "0.4.20"
chrono = "0.4.38"
env_logger = "0.11.3"
hashbrown = "0.12.3"

[features]
a1 = []



[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
tempfile = "3.10.1"